--- a/public/css/your-bugs.css
+++ b/public/css/your-bugs.css
@@ -128,7 +128,7 @@ li {
     width: 800px !important;
 } */
 
-#add-bug-container {
+#table-container {
     margin-right: 20px;
     /* min-width: 530px; */
     /* flex-grow: 1; */
